--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -93,6 +93,7 @@
         <a class="question" href="#">?</a>
       </div>
       <div>
+      <script src="item_price.js"></script>
         <div class="price-content">
           <div class="price-text">
             <span>価格</span>
