--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,11 +136,11 @@
 
               <%# 商品が売れていればsold outを表示しましょう %>
              
-              <%# if item.order.present? %>
+              <% if item.order.present? %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
-              <%# end %>
+              <% end %>
              
 
             </div>
@@ -179,8 +179,7 @@
             <% end %>
           </li>
       <% end %> 
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      
     </ul>
   </div>
   <%# /商品一覧 %>
