--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @items.image ,class:"item-box-img" %>
-      
+  <% if user_signed_in? && @items.order.presence %> 
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+      <% end %>
      
     </div>
     <div class="item-price-box">
@@ -23,16 +24,16 @@
       </span>
     </div>
 
-  <% if user_signed_in? && #@item.order.present! %> 
-  <% if current_user.id == @items.user_id%>
-    <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
+  <% if user_signed_in? && @items.order.presence %> 
+    <% if current_user.id == @items.user_id%>
+      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+      <p class="or-text">or</p>
 
-    <%= link_to "削除", item_path(@items.id), method: :delete, class:"item-destroy" %>
+      <%= link_to "削除", item_path(@items.id), method: :delete, class:"item-destroy" %>
 
- <% else %>
-   
-    <%= link_to "購入画面に進む",  item_orders_path(@items.id) ,class:"item-red-btn"%>
+  <% else %>
+    
+      <%= link_to "購入画面に進む",  item_orders_path(@items.id) ,class:"item-red-btn"%>
     
     <% end %>
   <% end %>
