--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,17 +24,15 @@
       </span>
     </div>
 
-  <% if user_signed_in? && @items.order.presence %> 
-    <% if current_user.id == @items.user_id%>
+  <% if user_signed_in? && @items.order.nil? %> 
+   <% if current_user.id == @items.user_id%>
       <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
 
       <%= link_to "削除", item_path(@items.id), method: :delete, class:"item-destroy" %>
 
   <% else %>
-    <% if current_user.id == @items.user_id%>
       <%= link_to "購入画面に進む",  item_orders_path(@items.id) ,class:"item-red-btn"%>
-    <% end %>
     <% end %>
   <% end %>
     
